fix TrainingController
